--- a/Page1.CSS
+++ b/Page1.CSS
@@ -29,5 +29,41 @@
     src: url(./Fonts/Polices/Raleway-Italic.woff)
 }
 html {
-    width: 1160px;
+  background-color: #f3f3f3;
 }
+body {
+  width: 1160px;
+  margin: 0 auto;
+}
+.Comp,.Exp,dt,h1{
+    font-family: 'Lato-Bold'
+}
+dd,p,a,li,h3{
+    font-family: 'Raleway-Regular';
+}
+h1 {
+color: #ffffff;
+}
+h2{
+color: #ffffff;
+font-family: 'Lato-Regular';
+}
+h3{
+color: #17abb3;
+}
+header{
+    background-color: #17abb3;
+}
+p{
+    text-indent: 50px;
+    text-align: justify;
+}
+th{
+    font-family: 'Raleway-Italic';
+}
+
+time{
+font-family: 'Lato-Italic';
+color: #17abb3
+}
+
