--- a/Page1.CSS
+++ b/Page1.CSS
@@ -39,7 +39,7 @@ body {
   font-family: 'Raleway-Regular', sans-serif;
   color: #222;
   line-height: 1.5;
-  padding: 0 20px;
+  padding: 0;
 }
 
 /* ====== Header ====== */
@@ -127,7 +127,14 @@ p {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
 }
-
+.Corps{
+  display: flex;
+  gap: 50px;
+  margin: 0 50px;
+}
+.Left{
+  width: 
+}
 /* Langues */
 dt {
   font-family: 'Lato', sans-serif;
